exports[`<Search /> renders correctly with collapse option 1`] = `
<form
  className="sc-EHOje dLVqgW">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb bcOkHq"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bJyNys"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa bKSUtd" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with default options 1`] = `
<form
  className="sc-EHOje cvEhrq">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb bcOkHq"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bJyNys"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa bKSUtd" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with input field name 1`] = `
<form
  className="sc-EHOje cvEhrq">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb bcOkHq"
      name="Field"
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bJyNys"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa bKSUtd" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with placeholder 1`] = `
<form
  className="sc-EHOje cvEhrq">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb bcOkHq"
      name={undefined}
      onChange={[Function]}
      placeholder="???"
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bJyNys"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa bKSUtd" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with theme 1`] = `
<form
  className="sc-EHOje fJunRy">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb iNzbeP"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH fgRaXS"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa bKSUtd" />
      </button>
    </span>
  </div>
</form>
`;
